
=== Miscellaneous ===

=== Bug fixes ===
 * #1842 (libOT.so.0.0.0 doesn't have a SONAME)
 * #1843 (Ali-Mikhail-Haq copula parameter value)
 * #1844 (MaximumDistribution::computePDF is wrong when all the marginals are equal and independent)
 * #1845 (MemoizeFunction does not propagate to finite difference gradient&hessian)
 * #1847 (ParametricFunction require unnecessary function evaluations)


== 1.17 release (2021-05-12) == #release-1.17

=== Library ===

==== Major changes ====

==== New classes ====
 * VertexValuePointToFieldFunction
 * KarhunenLoeveReduction
 * KarhunenLoeveValidation
 * IsotropicCovarianceModel
 * KroneckerCovarianceModel
 * VonMisesFactory
 * KFoldSplitter, LeaveOneOutSplitter

==== API changes ====
 * Removed deprecated Pairs alias
 * Removed deprecated SORMResult::getEventProbabilityHohenBichler/getGeneralisedReliabilityIndexHohenBichler
 * Removed deprecated OptimizationResult::getLagrangeMultipliers, OptimizationAlgorithm::computeLagrangeMultipliers
 * Removed deprecated FittingTest::Kolmogorov, FittingTest::BestModelKolmogorov (DistributionFactory argument only)
 * Deprecated Sample::computeStandardDeviationPerComponent, use computeStandardDeviation
 * Deprecated KarhunenLoeveResult::getEigenValues, use getEigenvalues
 * Removed StationaryCovarianceModel
 * CovarianceModel.computeAsScalar allows scalars
 * Swapped SimulatedAnnealingLHS constructor SpaceFilling/TemperatureProfile arguments
 * Added EfficientGlobalOptimization::getKrigingResult, gets the updated version of the KrigingResult passed to the constructor
 * Deprecated MultiStart::setStartingPoints/getStartingPoints, use MultiStart::setStartingSample/getStartingSample instead
 * MultiStart::setStartingPoint/getStartingPoint throws (previously did nothing)

=== Documentation ===
 * Fixed example and plot of Kolmogorov statistics.
 * Added a new example showing how to combine RandomWalkMetropolisHastings and PythonDistribution

=== Python module ===